# kindling

./: .gitignore  CLAUDE.md  CLEANUP.MD  LICENSE.md  NOTICE  README.md  RELATEDPERSON_FEATURE.md  example_related_person.yaml  pyproject.toml
.claude/skills/kindling/: SKILL.md
docs/plans/: 2026-03-06-encounter-linking-design.md
examples/: basic_cohort.py  single_patient.py
examples/profiles/: diabetes_cohort.yaml
kindling/: __init__.py  __main__.py  bundle_assembler.py  cli.py  config.py  fhir_compat.py  generator.py  nomsa-new.json  persona_loader.py  profile_parser.py  resource_factory.py  schemas.py  validate_cli.py  validator.py
kindling/personas/: __init__.py  babacar_child.yaml  david_healthy.yaml  fanta_anc.yaml  grace_tb.yaml  john_asthma.yaml  linda_hypertension.yaml  mary_diabetes.yaml  nomsa_diabetes_malaria.yaml
kindling/utils/: __init__.py  r4_converter.py  random_utils.py
personas-fhir/: nomsa.json
tests/: __init__.py  test_allergy_intolerance.py  test_bundle_assembler.py  test_diagnostic_report.py  test_encounter_linking.py  test_generator.py  test_immunization_coverage.py  test_medication_statement.py  test_observation_trending.py  test_personas.py  test_profile_parser.py  test_related_person.py  test_resource_factory.py  test_schemas.py  test_validation.py
